<DNR>: Update code about authorization and authentication
